fix layers-menu z-index

--- a/src/styles/_planting.scss
+++ b/src/styles/_planting.scss
@@ -38,12 +38,10 @@
 
 .layers-menu {
     display:none;
-    z-index: 999;
     position: absolute;
     top: 5px;
     bottom: 5px;
     right: 5px;
-    /*width: 40px;*/
 }
 .layers-menu .plantingjs-layer-item {
     height: 40px;
